Finished document list and removed unused imports